<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start"
tools:context="com.colormindapps.rest_reminder_alarm.MainActivity">

...
			android:text="@string/hint_dialog_text"
			style="@style/InfoButton"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/timer_layout"
			android:layout_below="@id/info_button"
			android:gravity="center"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/period_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center"
				style="@style/TitleFont" />

			<TextView
...
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:gravity="center"
				android:layout_weight="1">

				<Button
					android:id="@+id/button_period_end_extend"
					style="@style/ExtendButton"
					android:layout_width="@dimen/button_period_end_extend_width"
					android:layout_height="@dimen/button_period_end_extend_height"
					android:layout_gravity="center"
					android:stateListAnimator="@null"
					android:background="@drawable/btn_extend_np"
...
