...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.colormindapps.rest_reminder_alarm.SessionsListActivity">

    <TextView
        android:id="@+id/session_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:gravity="center" />
    <TextView
        android:id="@+id/session_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_date"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center" />
...
        android:layout_alignParentBottom="true"
        />

    <com.colormindapps.rest_reminder_alarm.charts.PieView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pie_view"
        android:layout_centerInParent="true"
        android:layout_margin="10dp" />


</RelativeLayout>

