...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:paddingTop="10dp">

    <Button
	    android:id="@+id/extend_dialog_button_extend"
		style="@style/ExtendDialogButton"
		android:stateListAnimator="@null"
	    android:text="@string/extend_current_period"
		/>
	<Button
	    android:id="@+id/extend_dialog_button_extend1"
		style="@style/ExtendDialogButton"
	    android:text="@string/extend_current_period"
		android:stateListAnimator="@null"
	    android:visibility="gone" />
	<Button
	    android:id="@+id/extend_dialog_button_extend2"
...
