package com.colormindapps.rest_reminder_alarm;

import static androidx.test.core.app.ApplicationProvider.getApplicationContext;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.swipeRight;
import static androidx.test.espresso.action.ViewActions.swipeDown;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.colormindapps.rest_reminder_alarm.RReminderTest.getResourceString;
import static com.google.common.truth.Truth.assertThat;
import static com.google.common.truth.Truth.assertWithMessage;

import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.not;

import android.content.Context;
import android.content.SharedPreferences;
import android.content.pm.ActivityInfo;
import android.preference.PreferenceManager;
import android.util.Log;

import androidx.fragment.app.DialogFragment;
import androidx.lifecycle.Lifecycle;
import androidx.test.core.app.ActivityScenario;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.contrib.DrawerActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import com.colormindapps.rest_reminder_alarm.shared.RReminder;

import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.Calendar;

@RunWith(AndroidJUnit4.class)
@LargeTest
public class EspressoSessionTest {
    SharedPreferences privatePreferences, preferences;
    SharedPreferences.Editor privateEditor, editor;
    float scaledDensity;
    int extendOptionCount, extendBaseLength, versionCode;
    int cancelType, cancelExtendCount;
    long cancelPeriodEndTimeValue;
    String expectedOfflineTitle, expectedOnlineWorkTitle, expectedOnlineRestTitle;
    int colorWork, colorRest;
    int currentDayOfMonth;
    ActivityScenario<MainActivity> scenario;

    String debug = "MAIN_SCENARIO_TEST";

    @Rule
    public ActivityScenarioRule<MainActivity> activityScenarioRule
            = new ActivityScenarioRule<>(MainActivity.class);

    @Before
    public void setUp(){
        preferences = PreferenceManager.getDefaultSharedPreferences(getApplicationContext());
        editor   = preferences.edit();
        scaledDensity = getApplicationContext().getResources().getDisplayMetrics().scaledDensity;

        expectedOfflineTitle = getResourceString(R.string.reminder_off_title);
        expectedOnlineWorkTitle = getResourceString(R.string.on_work_period).toUpperCase();
        expectedOnlineRestTitle = getResourceString(R.string.on_rest_period).toUpperCase();
        extendOptionCount = 3;
        extendBaseLength = 1;

        colorWork = getApplicationContext().getResources().getColor(com.colormindapps.rest_reminder_alarm.R.color.work);
        colorRest = getApplicationContext().getResources().getColor(com.colormindapps.rest_reminder_alarm.R.color.rest);


        editor.putBoolean(getResourceString(R.string.pref_enable_extend_key), true);
        editor.putBoolean(getResourceString(R.string.pref_enable_approx_notification_key), true);
        editor.putBoolean(getResourceString(R.string.pref_end_period_key), true);
        editor.putString(getResourceString(R.string.pref_work_period_length_key), "15:55");
        editor.putString(getResourceString(R.string.pref_rest_period_length_key), "15:55");
        editor.putBoolean(getResourceString(R.string.pref_enable_short_periods_key), false);
        editor.putInt(getResourceString(R.string.pref_period_extend_options_key), 3);
        editor.putInt(getResourceString(R.string.pref_period_extend_length_key), 1);
        editor.commit();

        activityScenarioRule.getScenario().onActivity(MainActivity::deleteDbForTests);
        currentDayOfMonth = Calendar.getInstance().get(Calendar.DAY_OF_MONTH);
    }

    @After
    public void tearDown(){
        activityScenarioRule.getScenario().onActivity(activity -> {
            setActivityValues(activity.periodType, activity.extendCount, activity.periodEndTimeValue);
        });


        RReminderMobile.cancelCounterAlarm(getApplicationContext(), cancelType, cancelExtendCount, cancelPeriodEndTimeValue);
        RReminderMobile.stopCounterService(getApplicationContext(), cancelType);

        editor.putBoolean(getResourceString(R.string.pref_enable_extend_key), false);
        editor.putString(getResourceString(R.string.pref_mode_key), "0");
        editor.putBoolean(getResourceString(R.string.pref_end_period_key), true);
        editor.putBoolean(getResourceString(R.string.pref_enable_extend_key), true);
        editor.putBoolean(getResourceString(R.string.pref_enable_short_periods_key), false);
        editor.putString(getResourceString(R.string.pref_work_period_length_key), "00:45");
        editor.putString(getResourceString(R.string.pref_rest_period_length_key), "00:15");
        editor.putInt(getResourceString(R.string.pref_period_extend_options_key), 3);
        editor.putInt(getResourceString(R.string.pref_period_extend_length_key), 5);
        editor.commit();
    }

    public void setActivityValues(int type, int extendCount, long periodEndTimeValue){
        cancelType = type;
        cancelExtendCount = extendCount;
        cancelPeriodEndTimeValue = periodEndTimeValue;
    }

    public void openSession(){
       onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
       onView(withId(R.id.menu_session_list)).perform(click());
       onView(allOf(isDescendantOfA(withId(R.id.calendarView)), withText("4"), isDisplayed())).perform(click());
       onView(isRoot()).perform(CustomActions.waitFor(1000));
       onView(withId(R.id.session_date)).check(matches(isDisplayed()));
       onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodCount(2)));
   }

    @Test
    public void testSessionStoredProperly(){

        //run reminder for multiple periods - 75 seconds, notif activity is updated with last period info
        long sessionStartFirst = Calendar.getInstance().getTimeInMillis();
        runSession(false);
        long sessionEndFirst = Calendar.getInstance().getTimeInMillis();
        String startString = RReminder.getTimeString(getApplicationContext(), sessionStartFirst).toString();
        String endString = RReminder.getTimeString(getApplicationContext(), sessionEndFirst).toString();
        String expectedTimeStringFirst = startString +" - "+ endString;
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(withId(R.id.period_title)).check(matches(withText(expectedOfflineTitle)));


        //launch second session

        long sessionStartSecond = Calendar.getInstance().getTimeInMillis();
        runSession(false);
        long sessionEndSecond = Calendar.getInstance().getTimeInMillis();
        startString = RReminder.getTimeString(getApplicationContext(), sessionStartSecond).toString();
        endString = RReminder.getTimeString(getApplicationContext(), sessionEndSecond).toString();
        String expectedTimeStringSecond = startString +" - "+ endString;
        String expectedDateStringFirst = RReminder.getSessionDateString(0,sessionStartFirst);
        String expectedDateStringSecond = RReminder.getSessionDateString(0,sessionStartSecond);
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(withId(R.id.period_title)).check(matches(withText(expectedOfflineTitle)));

        onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
        onView(withId(R.id.menu_session_list)).perform(click());
        onView(allOf(isDescendantOfA(withId(R.id.calendarView)), withText(Integer.toString(currentDayOfMonth)), isDisplayed())).perform(click());

       // onView(withText(expectedTimeStringFirst)).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.session_clock), isDisplayed())).check(matches(withText(expectedTimeStringFirst)));
        onView(allOf(withId(R.id.session_date), isDisplayed())).check(matches(withText(expectedDateStringFirst)));
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(allOf(withId(R.id.next), isDisplayed())).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        //onView(withText(expectedTimeStringSecond)).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.session_clock), isDisplayed())).check(matches(withText(expectedTimeStringSecond)));
        onView(allOf(withId(R.id.session_date), isDisplayed())).check(matches(withText(expectedDateStringSecond)));

    }

    @Test
    public void testSessionDefaultAutomaticMode(){
        testSessionDefaultBehaviour();
    }

    @Test
    public void testSessionDefaultManualMode(){
        editor.putString(getResourceString(com.colormindapps.rest_reminder_alarm.R.string.pref_mode_key), "1");
        editor.commit();
        testSessionDefaultBehaviour();
    }

    public void testSessionDefaultBehaviour(){
        long sessionStart = Calendar.getInstance().getTimeInMillis();
        int expectedCount = 7;
        long[] endTime  = runSession(true);
        long sessionEnd = Calendar.getInstance().getTimeInMillis();
        String startString = RReminder.getTimeString(getApplicationContext(), sessionStart).toString();
        String endString = RReminder.getTimeString(getApplicationContext(), sessionEnd).toString();
        String expectedTimeString = startString +" - "+ endString;
        String firstIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTime[0]).toString();
        String secondIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTime[1]).toString();
        String thirdIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTime[2]).toString();
        float expectedWorkLength = 80*1000;
        //subtract 6 seconds when turning off delay
        long sessionLength = endTime[6]-sessionStart;
        Log.d(debug, "session length: "+sessionLength/1000);
        //vajadzēja būt 110, bet ir 116. PIeskaitīts klāt pēdējais periods?
        float expectedWorkPercent = expectedWorkLength/sessionLength*100;

        onView(withId(R.id.period_title)).check(matches(withText(expectedOfflineTitle)));

        onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
        onView(withId(R.id.menu_session_list)).perform(click());
        onView(allOf(isDescendantOfA(withId(R.id.calendarView)), withText(Integer.toString(currentDayOfMonth)), isDisplayed())).perform(click());

        onView(allOf(withId(R.id.session_clock), isDisplayed())).check(matches(withText(expectedTimeString)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodCount(expectedCount)));

        //check the first and last periods for their end time values
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(0,endTime[0]-sessionStart)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(0,RReminder.WORK)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(6,endTime[6]-endTime[5])));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(6,RReminder.WORK)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(1,endTime[1]-endTime[0])));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(1,RReminder.REST)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(5,endTime[5]-endTime[4])));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(5,RReminder.REST)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPercent(0,expectedWorkPercent)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasTotalLength(1,30*1000)));

    }

    @Test
    public void testSessionSwipePeriodEnd(){
        long[] endTimes = new long[3];
        long sessionStart = Calendar.getInstance().getTimeInMillis();
        int expectedCount = 7;
        long firstSwipeAfter = 5000;
        long secondSwipeAfter = 2000;

        onView(withId(R.id.timer_layout)).perform(click());
        //run full length work period
        runFullWorkPeriod(true);
        endTimes[0] = Calendar.getInstance().getTimeInMillis()-500;
        //run full length rest period
        runFullRestPeriod(false);
        //after 5 seconds swipe work period end
        onView(isRoot()).perform(CustomActions.waitFor(firstSwipeAfter));
        if(RReminder.isPortrait(getApplicationContext())){
            onView(withId(R.id.swipe_area_text)).perform(swipeRight());
        } else {
            onView(withId(R.id.swipe_area_text)).perform(swipeDown());
        }
        endTimes[1] = Calendar.getInstance().getTimeInMillis();
        //run full length rest period
        runFullRestPeriod(true);
        //run full
        runFullWorkPeriod(false);
        //after 2 seconds swipe rest period
        onView(isRoot()).perform(CustomActions.waitFor(secondSwipeAfter));
        if(RReminder.isPortrait(getApplicationContext())){
            onView(withId(R.id.swipe_area_text)).perform(swipeRight());
        } else {
            onView(withId(R.id.swipe_area_text)).perform(swipeDown());
        }
        endTimes[2] = Calendar.getInstance().getTimeInMillis();
        //run full work period
        runFullWorkPeriod(true);
        timerLongPress(2000);
        long sessionEnd = Calendar.getInstance().getTimeInMillis()-2000;

        String startString = RReminder.getTimeString(getApplicationContext(), sessionStart).toString();
        String endString = RReminder.getTimeString(getApplicationContext(), sessionEnd).toString();
        String expectedTimeString = startString +" - "+ endString;
        String secondIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTimes[1]).toString();
        String thirdIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTimes[2]).toString();
        String forcedToEndString = "forced to end";

        onView(withId(R.id.period_title)).check(matches(withText(expectedOfflineTitle)));

        onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
        onView(withId(R.id.menu_session_list)).perform(click());
        onView(allOf(isDescendantOfA(withId(R.id.calendarView)), withText(Integer.toString(currentDayOfMonth)), isDisplayed())).perform(click());

        //onView(allOf(withId(R.id.session_clock), isDisplayed())).check(matches(withText(expectedTimeString)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodCount(expectedCount)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(0,endTimes[0]-sessionStart)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(0,RReminder.WORK)));
        onView(withId(R.id.pie_view)).check(matches(not(CustomMatchers.hasEnded(0))));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(2,firstSwipeAfter)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(2,RReminder.WORK)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasEnded(2)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodStart(3,endTimes[1])));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(3,RReminder.REST)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(5,secondSwipeAfter)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(5,RReminder.REST)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasEnded(5)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodStart(6,endTimes[2])));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(6,RReminder.WORK)));
        /*






        onView(withId(R.id.recyclerview_periods))
                .perform(scrollToPosition(5))
                .check(matches(atPosition(5, hasDescendant(withText(containsString(thirdIntermediateEndTime))))));
        onView(withId(R.id.recyclerview_periods))
                .check(matches(atPosition(5, hasDescendant(withText(containsString(forcedToEndString))))));
        onView(withId(R.id.recyclerview_periods))
                .check(matches(atPosition(5, withBackgroundColor(colorRest))));

        onView(withId(R.id.recyclerview_periods))
                .perform(scrollToPosition(7))
                .check(matches(atPosition(7, hasDescendant(withText(containsString(endString))))));
        onView(withId(R.id.recyclerview_periods))
                .check(matches(atPosition(7, withBackgroundColor(colorRest))));

         */
    }



    @Test
    public void testSessionExtendedOneOption(){
        editor.putInt(getResourceString(R.string.pref_period_extend_options_key), 1);
        editor.commit();
        long[] endTimes = new long[3];
        long sessionStart = Calendar.getInstance().getTimeInMillis();
        int expectedCount = 4;
        String extendString = "ext: ";

        onView(withId(R.id.timer_layout)).perform(click());
        //after 5 seconds extend current work period
        onView(isRoot()).perform(CustomActions.waitFor(5000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(35000));
        onView(withId(R.id.period_title)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(40000));
        onView(withId(R.id.notification_title)).check(matches(isDisplayed()));
        onView(withId(R.id.notification_button)).perform(click());
        endTimes[0] = Calendar.getInstance().getTimeInMillis();
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(withId(R.id.period_title)).check(matches(isDisplayed()));

        runFullRestPeriod(false);
        endTimes[1] = Calendar.getInstance().getTimeInMillis()-1000;
        runFullWorkPeriod(false);
        onView(isRoot()).perform(CustomActions.waitFor(2000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(38000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(45000));
        onView(withId(R.id.period_title)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(45000));
        onView(withId(R.id.notification_title)).check(matches(isDisplayed()));
        onView(withId(R.id.notification_button)).perform(click());
        endTimes[2] = Calendar.getInstance().getTimeInMillis()-1000;
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(withId(R.id.period_title)).check(matches(isDisplayed()));
        timerLongPress(2000);
        long sessionEnd = Calendar.getInstance().getTimeInMillis()-2000;



        String startString = RReminder.getTimeString(getApplicationContext(), sessionStart).toString();
        String endString = RReminder.getTimeString(getApplicationContext(), sessionEnd).toString();
        String expectedTimeString = startString +" - "+ endString;
        String firstIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTimes[0]).toString();
        String secondIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTimes[1]).toString();
        String thirdIntermediateEndTime = RReminder.getTimeString(getApplicationContext(), endTimes[2]).toString();
        onView(withId(R.id.period_title)).check(matches(withText(expectedOfflineTitle)));

        onView(withId(R.id.drawer_layout)).perform(DrawerActions.open());
        onView(withId(R.id.menu_session_list)).perform(click());
        onView(allOf(isDescendantOfA(withId(R.id.calendarView)), withText(Integer.toString(currentDayOfMonth)), isDisplayed())).perform(click());

        onView(allOf(withId(R.id.session_clock), isDisplayed())).check(matches(withText(expectedTimeString)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodCount(expectedCount)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(0,80*1000)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(0,RReminder.WORK_EXTENDED)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasExtendCount(0,1)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasExtendLength(0,60*1000)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(1,10000)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(1,RReminder.REST)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasExtendCount(1,0)));

        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodLength(3,130*1000)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasPeriodType(3,RReminder.REST_EXTENDED)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasExtendCount(3,2)));
        onView(withId(R.id.pie_view)).check(matches(CustomMatchers.hasExtendLength(3,120*1000)));

    }

    @Test
    public void testSessionExtendedMultipleOptions(){
        long[] endTimes = new long[3];
        long sessionStart = Calendar.getInstance().getTimeInMillis();
        int expectedCount = 4;
        String extendString = "ext: ";

        onView(withId(R.id.timer_layout)).perform(click());
        //after 5 seconds extend current work period
        onView(isRoot()).perform(CustomActions.waitFor(5000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(withId(R.id.extend_dialog_button_extend)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(35000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(withId(R.id.extend_dialog_button_extend)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(50000));
        onView(withId(R.id.timer_layout)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(50000));
        onView(withId(R.id.notification_title)).check(matches(isDisplayed()));
        onView(withId(R.id.notification_button)).perform(click());
        endTimes[0] = Calendar.getInstance().getTimeInMillis();
        onView(isRoot()).perform(CustomActions.waitFor(1000));
        onView(withId(R.id.period_title)).check(matches(isDisplayed()));

        runFullRestPeriod(false);
        endTimes[1] = Calendar.getInstance().getTimeInMillis()-1000;
        runFullWorkPeriod(false);
        onView(isRoot()).perform(CustomActions.waitFor(2000));
        onView(withId(R.id.button_period_end_extend)).perform(click());
        onView(withId(R.id.extend_dialog_button_extend1)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(38000));
        onView(withId(R.id.timer_layout)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(45000));
        onView(withId(R.id.timer_layout)).perform(click());
        onView(isRoot()).perform(CustomActions.waitFor(45000));
        onView(withId(R.id.notification_title)).check(matches(isDisplayed()));
